VSE: Crash When Trying to add Image Sequence / Movie [if based on file opened from pre 2.8] #87010

Closed
opened 2021-03-29 11:51:50 +02:00 by Terry Edhouse · 28 comments

System Information
Operating system: Linux-4.15.0-140-generic-x86_64-with-glibc2.23 64 Bits
Graphics card: GeForce GTX 1070 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 460.39

Blender Version
Broken: version: 2.93.0 Alpha (and 2.92.0), branch: master, commit date: 2021-03-28 10:50, hash: e47f5cf197
Worked: 2.91.2

Caused by 5713626422

Short description of error
Adding an Image/Sequence in the video sequence editor crashes blender

Exact steps for others to reproduce the error
Further investigation reveals that .blend files created with versions prior to 2.8, which used the Factory Default Startup file, are affected.

To reproduce :

  1. Start blender 2.79b

  2. Click 'File | Load Factory Settings'

  3. Save the file.

  4. Start blender 2.92.0 or later.

  5. Open the file saved in step 3.

  6. Switch to the VSE and click 'Add | Image/Sequence'

**System Information** Operating system: Linux-4.15.0-140-generic-x86_64-with-glibc2.23 64 Bits Graphics card: GeForce GTX 1070 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 460.39 **Blender Version** Broken: version: 2.93.0 Alpha (and 2.92.0), branch: master, commit date: 2021-03-28 10:50, hash: `e47f5cf197` Worked: 2.91.2 Caused by 5713626422 **Short description of error** Adding an Image/Sequence in the video sequence editor crashes blender **Exact steps for others to reproduce the error** Further investigation reveals that .blend files created with versions prior to 2.8, which used the Factory Default Startup file, are affected. To reproduce : 1. Start blender 2.79b 2. Click 'File | Load Factory Settings' 3. Save the file. 4. Start blender 2.92.0 or later. 5. Open the file saved in step 3. 6. Switch to the VSE and click 'Add | Image/Sequence'
Author

Added subscriber: @MrTez

Added subscriber: @MrTez

#85911 was marked as duplicate of this issue

#85911 was marked as duplicate of this issue
Member

Added subscriber: @filedescriptor

Added subscriber: @filedescriptor
Member

Changed status from 'Needs Triage' to: 'Needs User Info'

Changed status from 'Needs Triage' to: 'Needs User Info'
Member

Please open Blender's installation directory and double click on the blender_debug_gpu.cmd. This will start Blender in debug mode and create log files. Try to make Blender crash again. Once it crashes the Windows Explorer should open and show you up to two files, a debug log and the system information. Add them to your bug report via drag and drop. Please also upload the crash log located in C:\Users\[your username]\AppData\Local\Temp\[project name].crash.txt (or simply type %TEMP% into the path bar of the Windows Explorer).

Please open Blender's installation directory and double click on the `blender_debug_gpu.cmd`. This will start Blender in debug mode and create log files. Try to make Blender crash again. Once it crashes the Windows Explorer should open and show you up to two files, a debug log and the system information. Add them to your bug report via drag and drop. Please also upload the crash log located in `C:\Users\[your username]\AppData\Local\Temp\[project name].crash.txt` (or simply type `%TEMP%` into the path bar of the Windows Explorer).
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Cannot reproduce here.

Cannot reproduce here. - Does this happen with **any** image? Or just particular ones? - Could you check previous releases to narrow down when this issues was introduced? https://download.blender.org/release/
Author

I can't find anything remotely similar to 'blender_debug_gpu.cmd' in my blender installation - I'm running on a Linux system.

I ran blender from the command-line with the options :

  • debug-all --log-level 100 --verbose

After a lot of event messages I did Add | Image/Sequence and got a the message :

Writing: /tmp/blender.crash.txt
Segmentation fault (core dumped)

blender.crash.txt

I can't find anything remotely similar to 'blender_debug_gpu.cmd' in my blender installation - I'm running on a Linux system. I ran blender from the command-line with the options : - debug-all --log-level 100 --verbose After a lot of event messages I did Add | Image/Sequence and got a the message : Writing: /tmp/blender.crash.txt Segmentation fault (core dumped) [blender.crash.txt](https://archive.blender.org/developer/F9913332/blender.crash.txt)
Member

Changed status from 'Needs User Info' to: 'Needs Triage'

Changed status from 'Needs User Info' to: 'Needs Triage'
Author

Philipp,

It happens as soon as I click Add | Image/Sequence

I don't get any dialogue box to select images so it's not a problem with specific images.

It happens on 2.92.0 but 2.83.13 works fine. I'll install other versions and let you know when the problem started.

Philipp, It happens as soon as I click Add | Image/Sequence I don't get any dialogue box to select images so it's not a problem with specific images. It happens on 2.92.0 but 2.83.13 works fine. I'll install other versions and let you know when the problem started.
Author

Philipp,

The problem does not occur in version 2.91.2.

Also, the problem occurs when I do Add | Movie, but not when I do Add | Sound.

Philipp, The problem does not occur in version 2.91.2. Also, the problem occurs when I do Add | Movie, but not when I do Add | Sound.
Member

Changed status from 'Needs Triage' to: 'Needs User Info'

Changed status from 'Needs Triage' to: 'Needs User Info'
Member

Maybe it would be good to share/upload one movie that causes issues here (or are you saying this happens with any movie?)

Maybe it would be good to share/upload one movie that causes issues here (or are you saying this happens with **any** movie?)
Author

Philipp,

As soon as I click either 'Movie' or 'Image/Sequence' from the 'Add' menu, blender crashes.

I don't get the chance to specify a movie or image/sequence, no file view window appears.

Selecting 'Sound' from the 'Add' menu brings up a file view window as expected.

Philipp, As soon as I click either 'Movie' or 'Image/Sequence' from the 'Add' menu, blender crashes. I don't get the chance to specify a movie or image/sequence, no file view window appears. Selecting 'Sound' from the 'Add' menu brings up a file view window as expected.
Member

@MrTez So the file dialog does not open and Blender crashes before? What happens when you open any other file dialog?

@MrTez So the file dialog does not open and Blender crashes before? What happens when you open any other file dialog?
Author

I've only had it crash in the Video Sequencer when clicking either 'Movie' or 'Image/Sequence' from the 'Add' menu - selecting 'Sound' from the 'Add' menu brings up a file view window as expected. Hasn't crashed on anything else.

I've only had it crash in the Video Sequencer when clicking either 'Movie' or 'Image/Sequence' from the 'Add' menu - selecting 'Sound' from the 'Add' menu brings up a file view window as expected. Hasn't crashed on anything else.
Member

Changed status from 'Needs User Info' to: 'Needs Triage'

Changed status from 'Needs User Info' to: 'Needs Triage'
Member

Changed status from 'Needs Triage' to: 'Needs User Info'

Changed status from 'Needs Triage' to: 'Needs User Info'
Member

There were a couple of reports in relation of the filebrowser used in the VSE, e.g. #85911 (Adding video or audio to VSE Sequencer crashes Blender)

Not exactly sure where the roots are, but since Factory setting resolved in #85911, please try that as well:
Please try with File → Defaults → Load Factory Settings to see if you still can reproduce this issue.

There were a couple of reports in relation of the filebrowser used in the VSE, e.g. #85911 (Adding video or audio to VSE Sequencer crashes Blender) Not exactly sure where the roots are, but since Factory setting resolved in #85911, please try that as well: Please try with File → Defaults → Load Factory Settings to see if you still can reproduce this issue.
Philipp Oeser changed title from Video Sequence editor causes crash to VSE: Crash When Trying to add Image Sequence / Movie 2021-04-09 10:43:58 +02:00
Author

I've tried File → Defaults → Load Factory Settings and it works.

I had previously tried 'Load Factory Preferences' but that didn't prevent the crash.

I've tried File → Defaults → Load Factory Settings and it works. I had previously tried 'Load Factory Preferences' but that didn't prevent the crash.
Member

Changed status from 'Needs User Info' to: 'Resolved'

Changed status from 'Needs User Info' to: 'Resolved'
Philipp Oeser self-assigned this 2021-04-09 11:15:12 +02:00
Member

OK, thx getting back!

So this might be an Addon interfering here?
(could also be a Preference - though i doubt that - or something in your startup file?)

You could try enabling Addons one by one and check where other preferences differ.
For now, I will close this as resolved, but please keep us up-to-date if you've found which is the cause on you side (we can always reopen in such case).

OK, thx getting back! So this might be an Addon interfering here? (could also be a Preference - though i doubt that - or something in your startup file?) You could try enabling Addons one by one and check where other preferences differ. For now, I will close this as resolved, but please keep us up-to-date if you've found which is the cause on you side (we can always reopen in such case).
Author

I narrowed down the problem to something in my startup.blend file. Disabling all AddOns made no difference.

Further investigation reveals that .blend files created with versions prior to 2.8, which used the Factory Default Startup file, are affected.

To reproduce :

  1. Start blender 2.79b

  2. Click 'File | Load Factory Settings'

  3. Save the file.

  4. Start blender 2.92.0 or later.

  5. Open the file saved in step 3.

  6. Switch to the VSE and click 'Add | Image/Sequence'

I've discovered this problem even occurs with .blend files created by other people that I've downloaded (but not modified) - the version string at the start of the files I tested was v257.

Doing the above using blender 2.82.7 or 2.83.13 in step 1 does not result in a crash.

The weird thing is that while using the 2.79b default startup file causes the crash, if I use my customised 2.79b startup.blend file (ie., I skip step 2 above) there is no crash.

I've attached a copy of the .blend file I saved in step 3 above.

VSE-2.79b-FactorySettings.blend

I narrowed down the problem to something in my startup.blend file. Disabling all AddOns made no difference. Further investigation reveals that .blend files created with versions prior to 2.8, which used the Factory Default Startup file, are affected. To reproduce : 1. Start blender 2.79b 2. Click 'File | Load Factory Settings' 3. Save the file. 4. Start blender 2.92.0 or later. 5. Open the file saved in step 3. 6. Switch to the VSE and click 'Add | Image/Sequence' I've discovered this problem even occurs with .blend files created by other people that I've downloaded (but not modified) - the version string at the start of the files I tested was v257. Doing the above using blender 2.82.7 or 2.83.13 in step 1 does not result in a crash. The weird thing is that while using the 2.79b default startup file causes the crash, if I use my customised 2.79b startup.blend file (ie., I skip step 2 above) there is no crash. I've attached a copy of the .blend file I saved in step 3 above. [VSE-2.79b-FactorySettings.blend](https://archive.blender.org/developer/F9934705/VSE-2.79b-FactorySettings.blend)
Member

Changed status from 'Resolved' to: 'Confirmed'

Changed status from 'Resolved' to: 'Confirmed'
Member

Yep, can repro now, nice find.

This is caused by 5713626422, fix incoming...

Yep, can repro now, nice find. This is caused by 5713626422, fix incoming...
Philipp Oeser changed title from VSE: Crash When Trying to add Image Sequence / Movie to VSE: Crash When Trying to add Image Sequence / Movie [if based on file opened from pre 2.8] 2021-04-16 16:16:45 +02:00
Member

Added subscribers: @bunny, @pennomi

Added subscribers: @bunny, @pennomi

This issue was referenced by 0f81dafe6c

This issue was referenced by 0f81dafe6cecd17948e6a92fa2d1be9c473038e6
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#87010
No description provided.